<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/menu_id_card"
            android:icon="@drawable/ic_id_card"
            android:title="@string/id_card" />
        <item
            android:id="@+id/menu_lirc_card"
            android:icon="@drawable/ic_action_name"
            android:title="@string/library_card" />
        <item
            android:id="@+id/lirc_qr_code"
            android:icon="@drawable/ic_action_name"
            android:title="@string/qr_code" />
    </group>
    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/exit" />
    </group>
</menu>
