<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0c3555"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/vnr_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <com.dd.CircularProgressButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_textIdle="@string/Login"
        android:layout_above="@+id/register"
        android:visibility="invisible"
        android:layout_alignParentStart="true" />

    <com.dd.CircularProgressButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Signup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

</RelativeLayout>