<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/material_blue">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.dd.CircularProgressButton
        android:id="@+id/permission_grant"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Login"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_alignParentStart="true" />

</RelativeLayout>