<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/material_blue" >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/register_email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_password"
            android:layout_above="@+id/register_password"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:maxLines="1"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>
        
        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/register_email_id">

            <EditText
                android:id="@+id/register_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/register_contactno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/ic_password"
            android:layout_centerVertical="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/register_rollno">

            <EditText
                android:id="@+id/register_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/contactno"
                android:maxLength="10"
                android:inputType="phone"
                android:textColor="#000"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.dd.CircularProgressButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_textComplete="@string/Complete"
            app:cpb_textError="@string/Error"
            app:cpb_textIdle="Register"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/register_contactno"
            android:layout_marginTop="83dp" />


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/register_rollno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            app:mtf_image="@drawable/ic_password" >

            <EditText
                android:id="@+id/register_rno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Roll Number"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="#000"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

    </android.support.constraint.ConstraintLayout>
</ScrollView>