<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/material_blue" >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/vnr_logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_alignParentStart="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/signin_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signin"
            app:mtf_image="@drawable/ic_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/signin_username">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/signin_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signin_password"
            app:mtf_image="@drawable/ic_user_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/vnr_logo">

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="EmailId"
                android:singleLine="true"
                android:textColor="#000"
                android:textColorHint="@color/cpb_red_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.dd.CircularProgressButton
            android:id="@+id/signin"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_textComplete="@string/Complete"
            app:cpb_textError="@string/Error"
            app:cpb_textIdle="@string/Login"
            android:layout_alignParentStart="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/signin_password"
            android:layout_marginTop="39dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>